crates/dishaster-trial/tests/snapshots/trial_9ae94e070ed8cb46.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 11162538943635311430
  trigger_topic: tableware
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 71
        text: "你们的[员工]对待学生傲慢，\\说话带刺，\\这种服务态度不能接受。"
        emotion: 😨
        gesture: ✋
    response_options:
      - speech_id: 71
        keywords:
          - keyword: 员工
            options:
              - id: 231
                kind: agreement
                summary: 立即整改
              - id: 135
                kind: question
                summary: 要去投诉吗？
              - id: 181
                kind: question
                summary: 别人没说
    selected_response:
      speech_id: 71
      keyword_idx: 0
      option_idx: 1
    manager_speeches:
      - id: 135
        summary: 要去投诉吗？
        text: "要投诉就去行政那边，\\我们这儿能做的有限。"
        emotion: 😐
    impact:
      reputation_score: -1.015
      mood_change: -0.1015
      trust_change: -0.05075
      patience_change: -2.03
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 71
  continuation_depth: 0
