crates/dishaster-trial/tests/snapshots/trial_ae14e77054359b98.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 12543905331768826776
  trigger_topic: queue
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 17
        text: "服务员把菜单[价格]写错了，\\我照着菜单点的却被多收了，\\我要现场更正并退款。"
        emotion: 😤
        gesture: 👉
      - id: 37
        text: "我点的[素菜]竟然有肉，\\我是[素食者]，\\这差错太严重了！"
        emotion: 😢
        gesture: 🤚
        topic: quality
    response_options:
      - speech_id: 17
        keywords:
          - keyword: 价格
            options:
              - id: 95
                kind: agreement
                summary: 更正价格并退款
              - id: 94
                kind: question
                summary: 希望怎样补救？
              - id: 9
                kind: agreement
                summary: 提供补偿
      - speech_id: 37
        keywords:
          - keyword: 素菜
            options:
              - id: 181
                kind: question
                summary: 别人没说
              - id: 88
                kind: objection
                summary: 防止剩菜再售
          - keyword: 素食者
            options:
              - id: 275
                kind: agreement
                summary: 标准说明
    selected_response:
      speech_id: 17
      keyword_idx: 0
      option_idx: 1
    manager_speeches:
      - id: 94
        summary: 希望怎样补救？
        text: "您更倾向于现场更换、\\退款还是其他形式的\\补偿？"
        emotion: 🤔
    impact:
      reputation_score: -0.959
      mood_change: -0.0959
      trust_change: -0.04795
      patience_change: -1.918
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 17
    - 37
  continuation_depth: 0
