crates/dishaster-trial/tests/snapshots/trial_appeal_519e4174576f3791.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 5881210131331364753
  trigger_topic: appeal
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 87
        text: "每次来都只剩[青菜]和[豆腐]，\\想吃的[红烧肉]永远卖光，\\是不是故意少做？"
        emotion: 😒
        gesture: 👎
        topic: appeal
    response_options: ~
    selected_response: ~
    manager_speeches: ~
    impact: ~
    continuation_decision: ~
final_state:
  total_turns: 1
  asked_questions:
    - 87
  continuation_depth: 0
