crates/dishaster-trial/tests/snapshots/trial_appeal_d0764d4f4476689f.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 15021278609987233951
  trigger_topic: appeal
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 68
        text: "你们的[午休]时间配菜少，\\很多学生吃不上饭，\\能不能[提前]准备多一些？"
        emotion: 😢
        gesture: 👎
        topic: appeal
      - id: 52
        text: "今天[早饭]的面条都煮烂了，\\口感糟糕，\\不能随便糊弄学生的早餐。"
        emotion: 😭
        gesture: 🤝
        topic: quality
    response_options: ~
    selected_response: ~
    manager_speeches: ~
    impact: ~
    continuation_decision: ~
final_state:
  total_turns: 1
  asked_questions:
    - 68
    - 52
  continuation_depth: 0
