crates/dishaster-trial/tests/snapshots/trial_b37d9f600cd835b8.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 12933668939759105464
  trigger_topic: price
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 92
        text: "你们[标识]不清楚，\\我完全不知道哪个菜是辣的，\\结果吃到一个超级辣的[青椒]！"
        emotion: 🥵
      - id: 74
        text: "你们的[窗口]标签显示错位，\\我以为是另外一种菜，\\结果点错了。"
        emotion: 😡
        gesture: 🤏
        topic: quality
    response_options:
      - speech_id: 92
        keywords:
          - keyword: 标识
            options:
              - id: 211
                kind: agreement
                summary: 完善标识
              - id: 244
                kind: objection
                summary: 应自行询问
              - id: 233
                kind: question
                summary: 建议样式
          - keyword: 青椒
            options:
              - id: 185
                kind: question
                summary: 看清了吗
              - id: 211
                kind: agreement
                summary: 完善标识
              - id: 165
                kind: question
                summary: 能给我看
      - speech_id: 74
        keywords:
          - keyword: 窗口
            options:
              - id: 173
                kind: question
                summary: 能看看肉吗
              - id: 230
                kind: perjury
                summary: 标价错误
    selected_response:
      speech_id: 74
      keyword_idx: 0
      option_idx: 6
    manager_speeches:
      - id: 173
        summary: 能看看肉吗
        text: "能让我看看您这份[红烧肉]吗？\\可能是分菜不均造成的。"
        emotion: 🧐
    impact:
      reputation_score: -0.258
      mood_change: -0.025799999
      trust_change: -0.0128999995
      patience_change: -0.516
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 92
    - 74
  continuation_depth: 0
