crates/dishaster-trial/tests/snapshots/trial_cb231c3874846a73.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 14637574242682825331
  trigger_topic: queue
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 49
        text: "自助区的[菜品]经常空着，\\补菜补得又慢，\\我们得等很久才能吃上。"
        emotion: 😠
        gesture: 🤞
        topic: queue
      - id: 68
        text: "你们的[午休]时间配菜少，\\很多学生吃不上饭，\\能不能[提前]准备多一些？"
        emotion: 😢
        gesture: 👎
        topic: appeal
      - id: 59
        text: "你们把[菜名]改了又不公告，\\学生根本不知道，\\管理要透明一点。"
        emotion: 😢
        gesture: 👋
      - id: 8
        text: "今天的[菜名]怎么变了？\\我点的明明是标注的辣，\\结果一口都不辣，味道全变了。"
        emotion: 😡
        gesture: 👍
        topic: taste
    response_options:
      - speech_id: 49
        keywords:
          - keyword: 菜品
            options:
              - id: 173
                kind: question
                summary: 能看看肉吗
              - id: 253
                kind: question
                summary: 记录消耗
      - speech_id: 68
        keywords:
          - keyword: 午休
            options:
              - id: 235
                kind: agreement
                summary: 增开窗口
              - id: 191
                kind: agreement
                summary: 增加供应
              - id: 33
                kind: question
                summary: 是否接受替代菜？
          - keyword: 提前
            options:
              - id: 118
                kind: question
                summary: 是否接受替代方案？
              - id: 191
                kind: agreement
                summary: 增加供应
              - id: 259
                kind: agreement
                summary: 价格公示
      - speech_id: 59
        keywords:
          - keyword: 菜名
            options:
              - id: 231
                kind: agreement
                summary: 立即整改
              - id: 259
                kind: agreement
                summary: 价格公示
              - id: 21
                kind: agreement
                summary: 改进标识
      - speech_id: 8
        keywords:
          - keyword: 菜名
            options:
              - id: 211
                kind: agreement
                summary: 完善标识
              - id: 244
                kind: objection
                summary: 应自行询问
              - id: 173
                kind: question
                summary: 能看看肉吗
              - id: 212
                kind: objection
                summary: 很明显
    selected_response:
      speech_id: 68
      keyword_idx: 1
      option_idx: 7
    manager_speeches:
      - id: 259
        summary: 价格公示
        text: "理解您的困扰，\\我们会提前一周公示调价信息，\\并尽量保持核心菜品价格稳定。"
        emotion: 😅
    impact:
      reputation_score: 0.48900002
      mood_change: 0.048900004
      trust_change: 0.024450002
      patience_change: 0.97800004
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 49
    - 68
    - 59
    - 8
  continuation_depth: 0
