crates/dishaster-trial/tests/snapshots/trial_crab_939e7abb81f5d5fc.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 10637074315653535228
  trigger_topic: crab
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 113
        text: "就这半只[帝王蟹]还999元？\\壳都比肉多，\\你们当学生是提款机啊！"
        emotion: 😤
        gesture: 👎
        topic: crab
      - id: 116
        text: "食堂推999元[帝王蟹]，\\是想刺激消费攀比吗？\\学生之间还要比谁吃得起豪华餐？"
        emotion: 😠
        gesture: ✊
        topic: crab
    response_options:
      - speech_id: 113
        keywords:
          - keyword: 帝王蟹
            options:
              - id: 302
                kind: perjury
                summary: 试运营阶段
              - id: 318
                kind: perjury
                summary: 领导接待专用
              - id: 281
                kind: question
                summary: 觉得贵？
              - id: 291
                kind: agreement
                summary: 价格属实
      - speech_id: 116
        keywords:
          - keyword: 帝王蟹
            options:
              - id: 312
                kind: objection
                summary: 市场规律
              - id: 318
                kind: perjury
                summary: 领导接待专用
    selected_response:
      speech_id: 116
      keyword_idx: 0
      option_idx: 4
    manager_speeches:
      - id: 312
        summary: 市场规律
        text: "高端食材本就价格高，\\就像有人买奢侈品，有人穿平价服装。"
        emotion: 😑
        gesture: 👆
    impact:
      reputation_score: -0.5
      mood_change: -0.05
      trust_change: -0.025
      patience_change: -1
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 113
    - 116
  continuation_depth: 0
