crates/dishaster-trial/tests/snapshots/trial_d0764d4f4476689f.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 15021278609987233951
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 40
        text: "今日[特价]菜标错价了，\\我凭菜单付的，\\结果结账又被要求补差价。"
        emotion: 😱
        gesture: 🤏
      - id: 106
        text: "你们[菜品标签]写得太小了，\\字迹模糊看不清楚，\\特别是老年人根本看不清成分和价格。"
        emotion: 👀
      - id: 45
        text: "你们把[菜名]写得太模糊，\\我点的口味完全不对，\\能不能标准化一下？"
        emotion: 😰
        gesture: 👎
        topic: quality
    response_options: ~
    selected_response: ~
    manager_speeches: ~
    impact: ~
    continuation_decision: ~
final_state:
  total_turns: 1
  asked_questions:
    - 40
    - 106
    - 45
  continuation_depth: 0
