crates/dishaster-trial/tests/snapshots/trial_fbe07cfb0c24ed8c.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 18149643915985481100
  trigger_topic: hygiene
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 92
        text: "你们[标识]不清楚，\\我完全不知道哪个菜是辣的，\\结果吃到一个超级辣的[青椒]！"
        emotion: 🥵
      - id: 27
        text: "配菜里有[辣椒籽]，\\我不敢吃辣的，结果被弄得鼻子难受，\\这算怎么回事？"
        emotion: 😤
        gesture: 👋
        topic: quality
    response_options:
      - speech_id: 92
        keywords:
          - keyword: 标识
            options:
              - id: 243
                kind: agreement
                summary: 优化标签
          - keyword: 青椒
            options:
              - id: 165
                kind: question
                summary: 能给我看
              - id: 178
                kind: perjury
                summary: 看错了
              - id: 214
                kind: perjury
                summary: 新调料
      - speech_id: 27
        keywords:
          - keyword: 辣椒籽
            options:
              - id: 173
                kind: question
                summary: 能看看肉吗
    selected_response:
      speech_id: 27
      keyword_idx: 0
      option_idx: 4
    manager_speeches:
      - id: 173
        summary: 能看看肉吗
        text: "能让我看看您这份[红烧肉]吗？\\可能是分菜不均造成的。"
        emotion: 🧐
    impact:
      reputation_score: -0.258
      mood_change: -0.025799999
      trust_change: -0.0128999995
      patience_change: -0.516
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 92
    - 27
  continuation_depth: 0
